# agnova

./: CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  cyrius.cyml
.github/workflows/: ci.yml  release.yml
docs/adr/: 0001-port-to-cyrius.md
docs/architecture/: overview.md
docs/development/: roadmap.md
lib/: async.cyr  async_agnos.cyr  async_win.cyr  flags.cyr
rust-old/: Cargo.toml
rust-old/src/: helpers.rs  partitioning.rs  tests.rs
scripts/: ext2-format-smoke.sh  native-base-smoke.sh  native-disk-smoke.sh  untar-gz-smoke.sh  untar-smoke.sh
src/: cli.cyr  disk_backend.cyr  disk_plan.cyr  diskfmt.cyr  executor.cyr  helpers.cyr  lib.rs  main.cyr  orchestrator.cyr  partitioning.cyr  rootfs.cyr  rootfs.rs  types.cyr  types.rs  validation.cyr  validation.rs
tests/: agnova.bcyr  agnova.fcyr  agnova.tcyr  ext2fmt_proof.cyr  untar_proof.cyr  untargz_proof.cyr
