[package]
name = "agnova"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "Agnova — OS installer for AGNOS"
homepage = "https://github.com/MacCracken/agnova"
repository = "https://github.com/MacCracken/agnova"
readme = "README.md"
keywords = ["installer", "os", "partition", "setup"]
categories = ["os"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
